--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -79,6 +79,23 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_1FB0FF08400429AEB7666C52811E00F5-i
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_1B001717F0185453DD56BB4D050000F5-if00
 ##--------------------------------------------------------------------
 
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+[adxl345]
+cs_pin: rpi:None
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    175,175,20  # an example
+
+[input_shaper]
+shaper_freq_x: 66.4
+shaper_type_x: 3hump_ei
+shaper_freq_y: 67.8
+shaper_type_y: 3hump_ei
+
 [printer]
 kinematics: corexy
 max_velocity: 300  
