--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -320,12 +320,11 @@ rtd_reference_r: 430
 rtd_num_of_wires: 2
 min_temp: 10
 max_temp: 270
-max_power: 0.5 #12V cartridge! caution!
 min_extrude_temp: 170
-control = pid
-pid_kp = 26.213
-pid_ki = 1.304
-pid_kd = 131.721
+#control = pid
+#pid_kp = 26.213
+#pid_ki = 1.304
+#pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
 pressure_advance: 0.0625
 ##  Default is 0.040, leave stock
@@ -745,3 +744,12 @@ gcode:
 ##   "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
 ##   "AD595"
 ##   "PT100 INA826"
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 27.112
+#*# pid_ki = 1.469
+#*# pid_kd = 125.052
