--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -388,7 +388,7 @@ pin: P2.4
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
-heater_temp: 50.0
+heater_temp: 80.0
 ##  If you are experiencing back flow, you can reduce fan_speed
 #fan_speed: 1.0
 
@@ -534,7 +534,7 @@ runout_gcode:
     M118 Runout Detected
     M600
     M400
-switch_pin: P1.24
+switch_pin: !P1.25
 
 [gcode_macro M600]
 default_parameter_X: 25
@@ -659,7 +659,7 @@ gcode:
     M118 Homing...
     SET_PIN PIN=exhaust_fan VALUE=0    
     G28                            ; home all axes
-    #SKEW_PROFILE LOAD=my_skew_profile
+    SKEW_PROFILE LOAD=SKEWPROF
     BED_MESH_PROFILE LOAD=MESH
     G1 Z20 F3000                   ; move nozzle away from bed
     M117 Preheat (Print)
@@ -711,18 +711,13 @@ gcode:
 
 [gcode_macro heat_soak]
 gcode:
-    {% if printer.idle_timeout.state == "Ready" %}
-        SET_PIN PIN=exhaust_fan VALUE=0
-        G28
-        G1 Z10
-        G1 X150 Y150 F6000
-        M104 S240
-        M140 S100
-        UPDATE_DELAYED_GCODE ID=heatsoakDelay DURATION=1200
-    {% else %}
-        M117 Load disabled while printing!
-        M118 Load disabled while printing!
-    {% endif %}
+  SET_PIN PIN=exhaust_fan VALUE=0
+  G28
+  G1 Z10
+  G1 X150 Y150 F6000
+  M104 S240
+  M140 S100
+  UPDATE_DELAYED_GCODE ID=heatsoakDelay DURATION=1200
     
 [delayed_gcode heatsoakDelay] 
 gcode:
@@ -753,3 +748,8 @@ gcode:
 #*# pid_kp = 27.112
 #*# pid_ki = 1.469
 #*# pid_kd = 125.052
+#*#
+#*# [skew_correction SKEWPROF]
+#*# xy_skew = 0.00249068095216
+#*# xz_skew = 0.0
+#*# yz_skew = 0.0
