add verify heater code

--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -358,6 +358,9 @@ pid_kp: 58.437
 pid_ki: 2.347
 pid_kd: 363.769
 
+[verify_heater heater_bed]
+check_gain_time: 150
+
 #####################################################################
 #   Probe
 #####################################################################
