faster xy home, bed mesh

--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -133,7 +133,7 @@ position_endstop: 354
 position_max: 360
 
 ##--------------------------------------------------------------------
-homing_speed: 25
+homing_speed: 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -172,7 +172,7 @@ position_endstop: 349
 position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25
+homing_speed: 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -756,3 +756,45 @@ gcode:
 #*# xy_skew = 0.00249068095216
 #*# xz_skew = 0.0
 #*# yz_skew = 0.0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*#     0.120000, 0.107500, 0.085000, 0.070000, 0.065000, 0.085000, 0.127500
+#*#     0.095000, 0.080000, 0.050000, 0.030000, 0.025000, 0.042500, 0.085000
+#*#     0.085000, 0.072500, 0.042500, 0.022500, 0.007500, 0.027500, 0.067500
+#*#     0.087500, 0.070000, 0.025000, 0.000000, -0.002500, 0.012500, 0.062500
+#*#     0.107500, 0.080000, 0.042500, 0.027500, 0.012500, 0.030000, 0.072500
+#*#     0.117500, 0.100000, 0.072500, 0.052500, 0.040000, 0.055000, 0.107500
+#*#     0.100000, 0.087500, 0.062500, 0.045000, 0.032500, 0.057500, 0.105000
+#*# tension = 0.2
+#*# min_x = 60.0
+#*# algo = bicubic
+#*# y_count = 7
+#*# mesh_y_pps = 5
+#*# min_y = 60.0
+#*# x_count = 7
+#*# max_y = 289.98
+#*# mesh_x_pps = 5
+#*# max_x = 289.98
+#*#
+#*# [bed_mesh MESH]
+#*# version = 1
+#*# points =
+#*#     0.120000, 0.107500, 0.085000, 0.070000, 0.065000, 0.085000, 0.127500
+#*#     0.095000, 0.080000, 0.050000, 0.030000, 0.025000, 0.042500, 0.085000
+#*#     0.085000, 0.072500, 0.042500, 0.022500, 0.007500, 0.027500, 0.067500
+#*#     0.087500, 0.070000, 0.025000, 0.000000, -0.002500, 0.012500, 0.062500
+#*#     0.107500, 0.080000, 0.042500, 0.027500, 0.012500, 0.030000, 0.072500
+#*#     0.117500, 0.100000, 0.072500, 0.052500, 0.040000, 0.055000, 0.107500
+#*#     0.100000, 0.087500, 0.062500, 0.045000, 0.032500, 0.057500, 0.105000
+#*# tension = 0.2
+#*# min_x = 60.0
+#*# algo = bicubic
+#*# y_count = 7
+#*# mesh_y_pps = 5
+#*# min_y = 60.0
+#*# x_count = 7
+#*# max_y = 289.98
+#*# mesh_x_pps = 5
+#*# max_x = 289.98
