--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -203,7 +203,7 @@ endstop_pin: z:P1.25
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: 3.17 #3.10 #4.845 #4.875
+#position_endstop: 3.17 #3.10 #4.845 #4.875
 
 ##--------------------------------------------------------------------
 
@@ -350,7 +350,7 @@ heater_pin: z:P2.3
 sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: z:P0.23
 ##  Adjust Max Power so your heater doesn't warp your bed
-max_power: 0.6
+max_power: 0.65
 min_temp: 0
 max_temp: 120
 control: pid
@@ -393,7 +393,7 @@ kick_start_time: 0.5
 heater: extruder
 heater_temp: 80.0
 ##  If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
+fan_speed: 0.7
 
 [fan]
 ##  Print Cooling Fan - XYE board, Fan Pin
@@ -407,6 +407,7 @@ off_below: 0.10
 [heater_fan controller_fan]
 ##  Controller fan - Z board, HE1 Connector
 pin: z:P2.4
+fan_speed: 0.5
 kick_start_time: 0.5
 heater: heater_bed
 heater_temp: 45.0
@@ -553,6 +554,27 @@ gcode:
 
 [pause_resume]
 recover_velocity: 50
+
+
+[temperature_sensor T1]
+sensor_type: NTC 100K beta 3950
+sensor_pin: P0.25
+min_temp: 10
+max_temp: 100
+gcode_id: T1
+
+[temperature_sensor chamber]
+sensor_type: NTC 100K beta 3950
+sensor_pin: P0.24
+min_temp: 10
+max_temp: 100
+gcode_id: C
+
+[temperature_sensor T2]
+sensor_type: rpi_temperature
+min_temp: 10
+max_temp: 100
+gcode_id: T2
 
 
 #####################################################################
@@ -760,13 +782,13 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*#     0.120000, 0.107500, 0.085000, 0.070000, 0.065000, 0.085000, 0.127500
-#*#     0.095000, 0.080000, 0.050000, 0.030000, 0.025000, 0.042500, 0.085000
-#*#     0.085000, 0.072500, 0.042500, 0.022500, 0.007500, 0.027500, 0.067500
-#*#     0.087500, 0.070000, 0.025000, 0.000000, -0.002500, 0.012500, 0.062500
-#*#     0.107500, 0.080000, 0.042500, 0.027500, 0.012500, 0.030000, 0.072500
-#*#     0.117500, 0.100000, 0.072500, 0.052500, 0.040000, 0.055000, 0.107500
-#*#     0.100000, 0.087500, 0.062500, 0.045000, 0.032500, 0.057500, 0.105000
+#*#   0.125000, 0.107500, 0.080000, 0.060000, 0.055000, 0.080000, 0.125000
+#*#   0.097500, 0.075000, 0.045000, 0.027500, 0.025000, 0.042500, 0.085000
+#*#   0.085000, 0.065000, 0.032500, 0.012500, -0.002500, 0.022500, 0.060000
+#*#   0.095000, 0.070000, 0.027500, 0.000000, -0.000000, 0.017500, 0.062500
+#*#   0.120000, 0.087500, 0.042500, 0.025000, 0.010000, 0.030000, 0.075000
+#*#   0.127500, 0.105000, 0.072500, 0.055000, 0.042500, 0.057500, 0.110000
+#*#   0.105000, 0.085000, 0.055000, 0.040000, 0.027500, 0.052500, 0.102500
 #*# tension = 0.2
 #*# min_x = 60.0
 #*# algo = bicubic
@@ -781,13 +803,13 @@ gcode:
 #*# [bed_mesh MESH]
 #*# version = 1
 #*# points =
-#*#     0.120000, 0.107500, 0.085000, 0.070000, 0.065000, 0.085000, 0.127500
-#*#     0.095000, 0.080000, 0.050000, 0.030000, 0.025000, 0.042500, 0.085000
-#*#     0.085000, 0.072500, 0.042500, 0.022500, 0.007500, 0.027500, 0.067500
-#*#     0.087500, 0.070000, 0.025000, 0.000000, -0.002500, 0.012500, 0.062500
-#*#     0.107500, 0.080000, 0.042500, 0.027500, 0.012500, 0.030000, 0.072500
-#*#     0.117500, 0.100000, 0.072500, 0.052500, 0.040000, 0.055000, 0.107500
-#*#     0.100000, 0.087500, 0.062500, 0.045000, 0.032500, 0.057500, 0.105000
+#*#   0.125000, 0.107500, 0.080000, 0.060000, 0.055000, 0.080000, 0.125000
+#*#   0.097500, 0.075000, 0.045000, 0.027500, 0.025000, 0.042500, 0.085000
+#*#   0.085000, 0.065000, 0.032500, 0.012500, -0.002500, 0.022500, 0.060000
+#*#   0.095000, 0.070000, 0.027500, 0.000000, -0.000000, 0.017500, 0.062500
+#*#   0.120000, 0.087500, 0.042500, 0.025000, 0.010000, 0.030000, 0.075000
+#*#   0.127500, 0.105000, 0.072500, 0.055000, 0.042500, 0.057500, 0.110000
+#*#   0.105000, 0.085000, 0.055000, 0.040000, 0.027500, 0.052500, 0.102500
 #*# tension = 0.2
 #*# min_x = 60.0
 #*# algo = bicubic
@@ -798,3 +820,6 @@ gcode:
 #*# max_y = 289.98
 #*# mesh_x_pps = 5
 #*# max_x = 289.98
+#*#
+#*# [stepper_z]
+#*# position_endstop = 3.105
