--- a/2.4/Klipper.cfg
+++ b/2.4/Klipper.cfg
@@ -326,9 +326,9 @@ min_extrude_temp: 170
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.0625
+#pressure_advance: 0.0625
 ##  Default is 0.040, leave stock
-pressure_advance_smooth_time: 0.040
+#pressure_advance_smooth_time: 0.040
 
 ##  E0 on MCU X/Y
 ##  Make sure to update below for your relevant driver (2208 or 2209)
